<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".JoinActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/join_id"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/regular"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/join_number"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/join_number_hint"
        android:inputType="number"
        android:maxLength="4"
        android:textColorHint="@color/gray_dark"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/join_name"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/join_name_hint"
        android:inputType="text"
        android:maxLength="10"
        android:textColorHint="@color/gray_dark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btJoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/app_color"
        android:fontFamily="@font/bold"
        android:text="@string/join_join"
        android:textSize="18sp" />
</LinearLayout>