<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/black"
        android:gravity="center"
        android:text="@string/login_hello"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:text="@string/login_guide"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:importantForAccessibility="no"
            android:src="@drawable/card" />

        <Button
            android:id="@+id/btScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/app_color"
            android:fontFamily="@font/bold"
            android:text="@string/login_okay"
            android:textSize="18sp" />


    </LinearLayout>

    <Button
        android:id="@+id/btSuper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/zxing_transparent"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:text="@string/login_super"
        android:textColor="@color/gray_dark"
        android:textSize="18sp" />
</LinearLayout>