<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginBottom="14dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/border"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:text="@string/main_icon"
                android:textColor="@color/app_color"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:fontFamily="@font/medium"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@color/zxing_transparent"
            android:fontFamily="@font/regular"
            android:padding="14dp"
            android:text="@string/main_logout"
            android:textColor="@color/gray_dark"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llBarcode"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/ivBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_null" />

        <TextView
            android:id="@+id/tvBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/light"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_bright" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/bold"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="22sp"
            tools:ignore="RelativeOverlap" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvMeal1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/main_meal1"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="8dp"
                android:layout_height="22dp" />

            <TextView
                android:id="@+id/tvMeal2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/main_meal2"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="8dp"
                android:layout_height="22dp" />

            <TextView
                android:id="@+id/tvMeal3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/main_meal3"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginBottom="18dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_bright" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btGoRank"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/zxing_transparent"
            android:fontFamily="@font/semibold"
            android:text="@string/main_rank"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btGoRate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/zxing_transparent"
            android:fontFamily="@font/semibold"
            android:text="@string/main_rate"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btGoApply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/zxing_transparent"
            android:fontFamily="@font/semibold"
            android:text="@string/main_apply"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/extralight"
            android:text="@string/main_sign"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </RelativeLayout>
</LinearLayout>